--- a/maven+JDK setup/Dockerfile
+++ b/maven+JDK setup/Dockerfile
@@ -1,5 +1,7 @@
 FROM centos:latest
 
+RUN yum install git -y
+
 COPY jdk-8u171-linux-x64.rpm /
 
 RUN rpm -i /jdk-8u171-linux-x64.rpm
@@ -16,4 +18,4 @@ RUN echo "export MAVEN_HOME=/mavenhome" >> /root/.bashrc
 
 RUN echo "export PATH=/mavenhome/apache-maven-3.6.3/bin/:$PATH" >> /root/.bashrc
 
-RUN echo "export JAVA_HOME=/" >> /root/.bashrc 
+RUN echo "export JAVA_HOME=/" >> /root/.bashrc
